Add szu-ss option description to tutorial.

--- a/TUTORIAL.html
+++ b/TUTORIAL.html
@@ -184,7 +184,7 @@ Make string substitutions using two-column translation table
 
 Options
   -h, --help       print this help message and exit
-  -v, --verbose</pre>
+  -v, --verbose    include information useful for debugging</pre>
 
 <p>As we can see from the usage information, <i>szu-ss</i> requires a two-column translation table of source terms and their equivalents. For example, we could use a translation table for inserting the proper diacritics into names:</p>
 
