Tutorial: added missing paragraph tags.

--- a/TUTORIAL.html
+++ b/TUTORIAL.html
@@ -140,7 +140,7 @@ Options:
 
 <pre>你好，世界！</pre>
 
-We can divide the Chinese expression up into two parts (你好 and 世界), and then write the following translation table:
+<p>We can divide the Chinese expression up into two parts (你好 and 世界), and then write the following translation table:</p>
 
 <pre>你好|nǐhǎo|hello
 世界|shìjiè|world</pre>
