Minor tutorial copyedits.

--- a/TUTORIAL.html
+++ b/TUTORIAL.html
@@ -54,7 +54,7 @@
 
 <p>In this tutorial, text typed at a command shell is prefixed with the sigil “<code>#</code>” (superuser) or “<code>$</code>” (normal user), following a common Unix conventions for shell prompts. In general, examples of commands and command output are shown as if they were typed into a standard Unix shell.</p>
 
-<p>All text should be saved and handled as UTF-8 text, as the Sanzang Utilities do all input and output in UTF-8. The terminal should be set to UTF-8 as well, and should ideally should be capable of displaying CJK characters.</p>
+<p>All text should be saved and handled as UTF-8 text, as the Sanzang Utilities do all input and output in UTF-8. The terminal should be set to UTF-8 as well, and should ideally be capable of displaying CJK characters.</p>
 
 <p>The tutorial is organized as follows. The first section is a guide for installing the Sanzang Utils software. The next section covers the translation table format that is used by several programs, and which is central to the translation system. The next several sections deal with each program in turn, and how the program may be used. The last sections deal with taking the next steps toward advanced usage, and how to get help.</p>
 
