Minor documentation grammar fix.

--- a/TUTORIAL.html
+++ b/TUTORIAL.html
@@ -126,7 +126,7 @@ Options:
 
 <h2 id="szu_t">Translation: <i>szu-t</i></h2>
 
-<p>The next step is to learn <i>szu-t</i>, the translator. Since this is the main translation program, and it is important to understand its method and features. The usage information for <i>szu-t</i> is shown below:</p>
+<p>The next step is to learn <i>szu-t</i>, the translator. Since this is the main translation program, it is important to understand its method and features. The usage information for <i>szu-t</i> is shown below:</p>
 
 <pre>Usage: szu-t [options] table_file
 
