Major restructuring into executables and program modules.

--- a/TUTORIAL.html
+++ b/TUTORIAL.html
@@ -76,23 +76,13 @@
 
 <h2 id="installation">Installation</h2>
 
-<p><i>Windows users: installation in a Cygwin environment is advisable.</i></p>
+<p>Installation on a Unix type platform is advised, like Unix, Linux, BSD, or OS X. If you are using Windows, then installing in a Cygwin environment is recommended. First you must have Python 3 installed. Then to install Sanzang Utils, you can just call <i>pip3</i> to download and install the software:</p>
 
-<p>Sanzang Utils may be installed in one of two ways. The first way is the “Python way” of installing programs. To follow this method, first navigate to the Sanzang Utils directory, and then enter:</p>
+<pre># pip3 install sanzang-utils</pre>
+
+<p>If you do not have <i>pip3</i> installed on your system, you can download the Sanzang Utils software manually and then install it using the old method:</p>
 
 <pre># python3 setup.py install</pre>
-
-<p>This will install the programs onto your system very simply, but any uninstallation would need to be performed manually.</p>
-
-<p>The other way of installing Sanzang Utils is the classic “Unix way” of installing programs: <i>make</i>. To use this method instead, first navigate to the Sanzang Utils directory and then enter:</p>
-
-<pre># make install</pre>
-
-<p>Using <i>make</i> is more flexible and allows for easy uninstallation, which is performed as follows:</p>
-
-<pre># make uninstall</pre>
-
-<p>You may choose the method that you find more suitable for your system.</p>
 
 <h2 id="tables">Translation Tables</h2>
 
